fix: overflow container in milestones and title layer

--- a/src/components/landpage/milestones/styles.module.scss
+++ b/src/components/landpage/milestones/styles.module.scss
@@ -10,7 +10,7 @@
     transform: translateX(-50%);
     width: 1200px;
 
-    @media screen and (max-width: 995px) {
+    @media screen and (max-width: 1211px) {
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
@@ -26,7 +26,7 @@
       height: 400px;
       margin: 30px 0;
 
-      @media screen and (max-width: 995px) {
+      @media screen and (max-width: 1211px) {
         margin: 0;
         width: 100%;
       }
